--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
-  <title>HomeWork_015</title>
+  <title>HomeWork_15</title>
 </head>
 
 <body>
@@ -15,8 +15,246 @@
     </header>
     <main class="page">
       <div class="container">
+        <div class="products">
+          <div class="products__container">
+            <div class="products__header">
+              <div class="products__title title">Featured Products</div>
+              <div class="products__button">View All</div>
+            </div>
+            <div class="products__items">
+              <div class="products__item item item--sale">
+                <div class="item__sale">Sale <span>50%</span></div>
+                <div class="item__actions actions">
+                  <div class="actions__wishlist"></div>
+                  <div class="actions__quick-view"></div>
+                </div>
+                <div class="item__img">
+                  <picture>
+                    <source srcset="img/product_01.avif" type="image/avif">
+                    <img src="img/product_01.jpg" alt="green apple">
+                  </picture>
+                </div>
+                <div class="item__bottom">
+                  <div class="item__info">
+                    <div class="item__title">Green Apple</div>
+                    <div class="item__price price">
+                      <div class="price__wrapper">
+                        <div class="price__new">$14.99</div>
+                        <div class="price__old">$20.99</div>
+                      </div>
+                    </div>
+                    <div class="item__rating">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="item__button">
+                  </div>
+                </div>
+              </div>
+              <div class="products__item item">
+                <div class="item__actions actions">
+                  <div class="actions__wishlist"></div>
+                  <div class="actions__quick-view"></div>
+                </div>
+                <div class="item__img">
+                  <picture>
+                    <source srcset="img/product_02.avif" type="image/avif">
+                    <img src="img/product_02.jpg" alt="orange">
+                  </picture>
+                </div>
+                <div class="item__bottom">
+                  <div class="item__info">
+                    <div class="item__title">Fresh Indian Malta</div>
+                    <div class="item__price">$20.00</div>
+                    <div class="item__rating">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="item__button">
+                  </div>
+                </div>
+              </div>
+              <div class="products__item item">
+                <div class="item__actions actions">
+                  <div class="actions__wishlist"></div>
+                  <div class="actions__quick-view"></div>
+                </div>
+                <div class="item__img">
+                  <picture>
+                    <source srcset="img/product_03.avif" type="image/avif">
+                    <img src="img/product_03.jpg" alt="chinese cabbage">
+                  </picture>
+                </div>
+                <div class="item__bottom">
+                  <div class="item__info">
+                    <div class="item__title">Chinese cabbage</div>
+                    <div class="item__price">$12.00</div>
+                    <div class="item__rating">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="item__button">
+                  </div>
+                </div>
+              </div>
+              <div class="products__item item">
+                <div class="item__actions actions">
+                  <div class="actions__wishlist"></div>
+                  <div class="actions__quick-view"></div>
+                </div>
+                <div class="item__img">
+                  <picture>
+                    <source srcset="img/product_04.avif" type="image/avif">
+                    <img src="img/product_04.jpg" alt="green lettuce">
+                  </picture>
+                </div>
+                <div class="item__bottom">
+                  <div class="item__info">
+                    <div class="item__title">Green Lettuce</div>
+                    <div class="item__price">$9.00</div>
+                    <div class="item__rating">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="item__button"></div>
+                </div>
+              </div>
+              <div class="products__item item">
+                <div class="item__actions actions">
+                  <div class="actions__wishlist"></div>
+                  <div class="actions__quick-view"></div>
+                </div>
+                <div class="item__img">
+                  <picture>
+                    <source srcset="img/product_05.avif" type="image/avif">
+                    <img src="img/product_05.jpg" alt="eggplant">
+                  </picture>
+                </div>
+                <div class="item__bottom">
+                  <div class="item__info">
+                    <div class="item__title">Eggplant</div>
+                    <div class="item__price">$34.00</div>
+                    <div class="item__rating">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star-color.svg" alt="">
+                      <img src="img/icon_star.svg" alt="">
+                    </div>
+                  </div>
+                  <div class="item__button">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="news">
+          <div class="news__container">
+            <div class="news__title title">Latest News</div>
+            <div class="news__cards">
+              <div class="news__card card">
+                <div class="card__top">
+                  <div class="card__date date">
+                    <div class="date__day">18</div>
+                    <div class="date__month">Nov</div>
+                  </div>
+                  <div class="card__img">
+                    <picture>
+                      <source srcset="img/news_01.avif 1x, img/news_01-2x.avif 2x, img/news_01-3x.avif 3x"
+                        type="image/avif">
 
-      </div>
+                      <img src="img/news_01.jpg" alt="A group of fresh oranges resting on a blue tabletop.">
+                    </picture>
+                  </div>
+                </div>
+                <div class="card__content">
+                  <div class="card__info info">
+                    <div class="info__tag">Food</div>
+                    <div class="info__author"><span>By </span>Admin</div>
+                    <div class="info__comments">65 Comments</div>
+                  </div>
+                  <div class="card__title">
+                    Curabitur porttitor orci eget neque accumsan venenatis. Nunc fermentum.
+                  </div>
+                  <div class="card__more">Read More</div>
+                </div>
+              </div>
+              <div class="news__card card">
+                <div class="card__top">
+                  <div class="card__date date">
+                    <div class="date__day">29</div>
+                    <div class="date__month">Jan</div>
+                  </div>
+                  <div class="card__img">
+                    <picture>
+                      <source srcset="img/news_02.avif 1x, img/news_02-2x.avif 2x, img/news_02-3x.avif 3x"
+                        type="image/avif">
+
+                      <img src="img/news_02.jpg"
+                        alt="A dish displaying a perfectly cooked egg, creamy avocado slices, and vibrant spinach on a white plate.">
+                    </picture>
+                  </div>
+                </div>
+                <div class="card__content">
+                  <div class="card__info info">
+                    <div class="info__tag">Food</div>
+                    <div class="info__author"><span>By </span>Admin</div>
+                    <div class="info__comments">65 Comments</div>
+                  </div>
+                  <div class="card__title">
+                    Eget lobortis lorem lacinia. Vivamus pharetra semper,
+                  </div>
+                  <a class="card__more">Read More</a>
+                </div>
+              </div>
+              <div class="news__card card">
+                <div class="card__top">
+                  <div class="card__date date">
+                    <div class="date__day">21</div>
+                    <div class="date__month">Feb</div>
+                  </div>
+                  <div class="card__img">
+                    <picture>
+                      <source srcset="img/news_03.avif 1x, img/news_03-2x.avif 2x, img/news_03-3x.avif 3x"
+                        type="image/avif">
+
+                      <img src="img/news_03.jpg"
+                        alt="A vibrant assortment of vegetables and fruits in a bowl rests on a wooden table.">
+                    </picture>
+                  </div>
+                </div>
+                <div class="card__content">
+                  <div class="card__info info">
+                    <div class="info__tag">Food</div>
+                    <div class="info__author"><span>By </span>Admin</div>
+                    <div class="info__comments">65 Comments</div>
+                  </div>
+                  <div class="card__title">
+                    Maecenas blandit risus elementum mauris malesuada.
+                  </div>
+                  <div class="card__more">Read More</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
     <footer class="footer"></footer>
   </div>
