--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -50,15 +50,8 @@
     </main>
     <footer class="footer"></footer>
   </div>
-</body>
 
-<script>
-  const burger = document.querySelector('.header__burger');
-  const menu = document.querySelector('.header__menu');
-  burger.addEventListener('click', () => {
-    burger.classList.toggle('active');
-    menu.classList.toggle('active');
-  });
-</script>
+  <script src="js/script.js"></script>
+</body>
 
 </html>
