--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="page">
       <div class="container">
-        <!-- <div class="blossomia">
+        <div class="blossomia">
           <div class="blossomia__container">
             <div class="blossomia__wrapper">
               <div class="blossomia__flex-container">
@@ -172,7 +172,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="ecobazar">
           <div class="ecobazar__container">
             <div class="ecobazar__head head">
